--- a/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
+++ b/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="54bmcid4.tmp~" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.JSInterop" Version="5.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
   </ItemGroup>
 
