--- a/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
+++ b/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.JSInterop" Version="5.0.8" />
+    <PackageReference Include="Microsoft.JSInterop" Version="6.0.0-preview.6.21355.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
