--- a/eShop.Web/eShop.Web.csproj
+++ b/eShop.Web/eShop.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\eShop.Web.CustomerPortal\Pages\LineItemComp.razor" Link="LineItemComp.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\eShop.DataStore.HardCoded\eShop.DataStore.HardCoded.csproj" />
     <ProjectReference Include="..\eShop.ShoppingCart.LocalStorage\eShop.ShoppingCart.LocalStorage.csproj" />
     <ProjectReference Include="..\eShop.Web.AdminPortal\eShop.Web.AdminPortal.csproj" />
