--- a/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
+++ b/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.4.21253.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
+    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+    <ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
+  </ItemGroup>
+
 </Project>
