--- a/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
+++ b/eShop.ShoppingCart.LocalStorage/eShop.ShoppingCart.LocalStorage.csproj
@@ -1,16 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.JSInterop" Version="6.0.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.JSInterop" Version="6.0.5" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+	</ItemGroup>
 
 </Project>
