--- a/eShop.StateStore.DI/eShop.StateStore.DI.csproj
+++ b/eShop.StateStore.DI/eShop.StateStore.DI.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+	</ItemGroup>
 
 </Project>
