--- a/eShop.UseCases/eShop.UseCases.csproj
+++ b/eShop.UseCases/eShop.UseCases.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
+	</ItemGroup>
 
 </Project>
