--- a/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
+++ b/eShop.Web.AdminPortal/eShop.Web.AdminPortal.csproj
@@ -1,22 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
 
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
+	<ItemGroup>
+		<SupportedPlatform Include="browser" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.5" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.5" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
-    <ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
-    <ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\eShop.CoreBusiness\eShop.CoreBusiness.csproj" />
+		<ProjectReference Include="..\eShop.UseCases\eShop.UseCases.csproj" />
+		<ProjectReference Include="..\eShop.Web.Common\eShop.Web.Common.csproj" />
+	</ItemGroup>
 
 </Project>
